--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 
- <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HCK API SERVICES </title>
-  <link rel="stylesheet" type="text/css" href="./css/index.css" />
- </head>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HCK API SERVICES </title>
+    <link rel="stylesheet" type="text/css" href="./css/index.css" />
+  </head>
 
- <body>
-  <div class="container">
-   <h1 class="container__title">
-     Welcome to the Herald College Kathmandu (HCK) api services.
-   </h1>
-   <div class="container__img-container">
-    <img src="./images/logo.png" alt="herald college Kathmandu logo" />
-    <img src="./images/community.jpeg" alt="HCK Platform logo" />
-   </div>
-  </div>
-   <span id="copyright">&COPY; Development Platform Community</span><br />
- </body>
+  <body>
+    <div class="container">
+      <h1 class="container__title">
+        Welcome to the Herald College Kathmandu (HCK) api services.
+      </h1>
+      <div class="container__img-container">
+        <img src="./images/logo.png" alt="herald college Kathmandu logo" />
+        <img src="./images/community.jpeg" alt="HCK Platform logo" />
+      </div><br /><br />
+      <span id="container__link">Swagger Api Documentation: <a href="/api-docs">/api-docs</a></span>
+      <span id="container__link">Visit Herald College Kathmandu Site: <a target="_blank" href="https://heraldcollege.edu.np/">Click me</a></span>
+    </div>
+    <span id="copyright">&COPY; Development Platform Community</span><br />
+  </body>
 
 </html>
